main pages done

--- a/pages/post.html
+++ b/pages/post.html
@@ -63,10 +63,10 @@
                         <a class="nav-link text-light" href="../index.html">Home</a>
                     </li>
                     <li class="nav-item text-center flex-fill">
-                        <a class="nav-link active disabled text-light" href="#">About Us</a>
+                        <a class="nav-link text-light" href="../pages/about.html">About Us</a>
                     </li>
                     <li class="nav-item text-center flex-fill">
-                        <a class="nav-link text-light" href="../pages/post.html">Post</a>
+                        <a class="nav-link active disabled text-light" href="#">Post</a>
                     </li>
                     <li class="nav-item text-center flex-fill">
                         <a class="nav-link text-light" href="../pages/contactUs.html">Contact Us</a>
@@ -79,56 +79,52 @@
     <header class="py-5 text-white">
         <div class="container text-center">
             <div style="background-color: rgba(0, 0, 0, 0.5); padding: 2rem; border-radius: 1rem;">
-                <h1 class="display-5 fw-bold">About Us</h1>
+                <h1 class="display-5 fw-bold">Post</h1>
                 <p class="fs-4 fw-normal mb-0">Discover the inspiration behind this website</p>
             </div>
         </div>
     </header>
 
     <div class="container my-5 bg-dark p-4 rounded">
-
-        <div class="row justify-content-center mb-5">
-            <div class="col-md-6">
-                <p class="lead lh-lg text-white">
-                    <span class="fw-bold fs-1">Hello! </span>I created this blog to express my thoughts and share my
-                    passion
-                    for some of my
-                    favorite
-                    programming languages. As a developer, I've had the opportunity to work with many languages, but
-                    there are a few that truly
-                    stand out to me. Languages like Java, PHP, SQL, and HTML/CSS have shaped my development journey and
-                    continue to
-                    inspire me. Java,
-                    with its versatility and widespread use in enterprise-level applications, is a language I deeply
-                    admire. PHP has been
-                    my go-to for building dynamic websites, and I love how flexible and powerful it is for server-side
-                    scripting.
-                </p>
-            </div>
-            <div class="col-md-6 text-center">
-                <img src="../public/about.jpg" alt="Coding passion" class="img-fluid rounded shadow">
+        <!-- Post Details -->
+        <div class="post-header text-white mb-4">
+            <h2>Exploring the Power of Programming Languages</h2>
+            <div class="d-flex justify-content-between text-light">
+                <p>Posted on: <strong>May 7, 2025</strong></p>
+                <p>By: <strong>Daniel Joshua Saberon</strong> | <span>Comptuer Professional</span></p>
             </div>
         </div>
 
-        <div class="row justify-content-center mb-5">
-            <div class="col-md-6 order-md-2">
-                <p class="lead lh-lg text-white">
-                    SQL is essential for anyone working with databases, and its efficiency in querying large datasets is
-                    unmatched.
-                    Meanwhile, HTML and CSS serve as the foundation for web development, allowing me to create visually
-                    appealing and
-                    responsive websites.Through this blog, I aim to share my knowledge, help others learn, and build a
-                    community of
-                    like-minded developers.
-                    I'll cover topics from beginner to advanced levels, provide code snippets, tutorials, and insights
-                    that will help
-                    anyone who wants to improve their programming skills.
-                </p>
-            </div>
-            <div class="col-md-6 order-md-1 text-center">
-                <img src="../public/about2.jpg" alt="Programming Languages" class="img-fluid rounded shadow">
-            </div>
-        </div>
+        <!-- Blog Content -->
+        <p class="lead text-light">
+            In this post, I would like to share my journey as a developer and how my love for coding has shaped the way
+            I view the world. Programming languages like Java, PHP, and HTML/CSS have been my go-to tools for building
+            impactful applications and websites. Each language has its strengths, and throughout this blog, I will dive
+            into how they contribute to the world of development.
+        </p>
+
+        <p class="lead text-light">
+            My interest in coding began when I first learned HTML and CSS. These languages introduced me to the power
+            of web development and opened my eyes to the potential of creating something from scratch that people could
+            use. From there, I ventured into PHP and Java, exploring the deeper functionalities that these languages
+            offer for building dynamic, scalable, and enterprise-level solutions.
+        </p>
+
+        <h3 class="text-light">What You Can Expect From This Blog</h3>
+        <p class="lead text-light">
+            Through this blog, I aim to share tutorials, tips, and thoughts on various technologies I have worked with,
+            such as Java, PHP, SQL, and modern web development techniques. Whether you're a beginner or an experienced
+            developer, you will find something useful here, from basic tips to advanced topics that can help you grow as
+            a developer.
+        </p>
+
+        <p class="lead text-light">
+            I encourage you to explore different areas of programming and to keep experimenting and building. The
+            journey
+            is as exciting as the destination, and through this blog, I hope to inspire you to continue learning and
+            growing
+            in the field of development.
+        </p>
     </div>
 
     <footer class="container text-center text-white py-4">
