--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Blog</title>
+    <title>The BLOG website</title>
     <style>
         body::-webkit-scrollbar {
             display: none;
@@ -44,7 +44,7 @@
 </head>
 
 <body class="bg-dark-subtle"
-    style="background-image: url('public/bg.png'); background-size: cover; background-position: center; background-attachment: fixed; margin: 0; padding: 0; ;">
+    style="background-image: url('public/bg.png'); background-size: cover; background-position: center; background-attachment: fixed; margin: 0; padding: 0;">
     <nav class="navbar navbar-dark bg-black">
         <div class="container-fluid d-flex flex-column align-items-start">
 
@@ -70,10 +70,10 @@
                         <a class="nav-link text-light" href="pages/about.html">About Us</a>
                     </li>
                     <li class="nav-item text-center flex-fill">
-                        <a class="nav-link text-light" href="post.php">Post</a>
+                        <a class="nav-link text-light" href="pages/post.html">Post</a>
                     </li>
                     <li class="nav-item text-center flex-fill">
-                        <a class="nav-link text-light" href="contact.php">Contact Us</a>
+                        <a class="nav-link text-light" href="pages/contactUs.html">Contact Us</a>
                     </li>
                 </ul>
             </div>
@@ -81,53 +81,83 @@
         </div>
     </nav>
 
-    <header style="padding: 2rem;">
-        <div class="text-center text-white">
-            <h1>The Blog</h1>
-            <div class="lead">Welcome to my Blog</div>
+    <header class="py-5 text-white">
+        <div class="container text-center">
+            <div style="background-color: rgba(0, 0, 0, 0.5); padding: 2rem; border-radius: 1rem;">
+                <h1 class="display-5 fw-bold">The Blogs</h1>
+                <p class="fs-4 fw-normal">A journey through code, creativity, and learning</p>
+            </div>
         </div>
     </header>
 
-    <div class="container my-5">
+
+    <div class="container mb-5">
         <div class="row g-4 justify-content-center">
 
             <div class="col-md-6">
-                <button onclick="location.href='pages/about.html'"
-                    class="w-100 bg-secondary text-light p-4 rounded text-center shadow border-0 post-btn">
-                    <h2 class="mb-2">Java</h2>
-                    <p class="lead mb-1">Want to know more? Click Title</p>
-                    <p class="mb-0">05-21-2003</p>
+                <button onclick="location.href='contents/java.html'"
+                    class="w-100 bg-dark text-light p-3 rounded text-center shadow border-0 post-btn h-100"
+                    style="height: 300px;">
+                    <div class="d-flex flex-column justify-content-between h-100">
+                        <img src="public/java.jpg" alt="Java" style="width: 85%; height: 300px; object-fit: cover;"
+                            class="rounded mx-auto">
+                        <div>
+                            <h2 class="mb-2">Java</h2>
+                            <p class="lead mb-1">Want to know more? Click Here</p>
+                            <p class="mb-0">05-21-2003</p>
+                        </div>
+                    </div>
                 </button>
             </div>
 
             <div class="col-md-6">
-                <button onclick="location.href='PHP.php'"
-                    class="w-100 bg-secondary text-light p-4 rounded text-center shadow border-0 post-btn">
-                    <h2 class="mb-2">PHP</h2>
-                    <p class="lead mb-1">Want to know more? Click Title</p>
-                    <p class="mb-0">05-21-2003</p>
+                <button onclick="location.href='contents/php.html'"
+                    class="w-100 bg-dark text-light p-3 rounded text-center shadow border-0 post-btn h-100"
+                    style="height: 300px;">
+                    <div class="d-flex flex-column justify-content-between h-100">
+                        <img src="public/php.png" alt="PHP" style="width: 85%; height: 300px; object-fit: cover;"
+                            class="rounded mx-auto">
+                        <div>
+                            <h2 class="mb-2">PHP</h2>
+                            <p class="lead mb-1">Want to know more? Click Here</p>
+                            <p class="mb-0">05-21-2003</p>
+                        </div>
+                    </div>
                 </button>
             </div>
 
             <div class="col-md-6">
-                <button onclick="location.href='SQL.php'"
-                    class="w-100 bg-secondary text-light p-4 rounded text-center shadow border-0 post-btn">
-                    <h2 class="mb-2">SQL</h2>
-                    <p class="lead mb-1">Want to know more? Click Title</p>
-                    <p class="mb-0">05-21-2003</p>
+                <button onclick="location.href='contents/sql.html'"
+                    class="w-100 bg-dark text-light p-3 rounded text-center shadow border-0 post-btn h-100"
+                    style="height: 300px;">
+                    <div class="d-flex flex-column justify-content-between h-100">
+                        <img src="public/sql.png" alt="SQL" style="width: 85%; height: 300px; object-fit: cover;"
+                            class="rounded mx-auto">
+                        <div>
+                            <h2 class="mb-2">SQL</h2>
+                            <p class="lead mb-1">Want to know more? Click Here</p>
+                            <p class="mb-0">05-21-2003</p>
+                        </div>
+                    </div>
                 </button>
             </div>
 
             <div class="col-md-6">
-                <button onclick="location.href='HTML-CSS.php'"
-                    class="w-100 bg-secondary text-light p-4 rounded text-center shadow border-0 post-btn">
-                    <h2 class="mb-2">HTML/CSS</h2>
-                    <p class="lead mb-1">Want to know more? Click Title</p>
-                    <p class="mb-0">05-21-2003</p>
+                <button onclick="location.href='contents/css-html.html'"
+                    class="w-100 bg-dark text-light p-3 rounded text-center shadow border-0 post-btn h-100"
+                    style="height: 300px;">
+                    <div class="d-flex flex-column justify-content-between h-100">
+                        <img src="public/css-html.png" alt="HTML/CSS"
+                            style="width: 85%; height: 300px; object-fit: cover;" class="rounded mx-auto">
+                        <div>
+                            <h2 class="mb-2">HTML/CSS</h2>
+                            <p class="lead mb-1">Want to know more? Click Here</p>
+                            <p class="mb-0">05-21-2003</p>
+                        </div>
+                    </div>
                 </button>
             </div>
 
-            <!-- Older Posts Button -->
             <div class="col-12 text-end mt-3">
                 <button class="btn btn-outline-light btn-lg">Older Post</button>
             </div>
@@ -135,15 +165,17 @@
         </div>
     </div>
 
-    <div class="container-fluid text-center mb-4">
+
+    <footer class="container text-center text-white py-4">
         <ul class="nav justify-content-center">
-            <li class="nav-item"><a class="nav-link text-light" href="Blog.php">Home</a></li>
-            <li class="nav-item"><a class="nav-link text-light" href="#">Technology</a></li>
-            <li class="nav-item"><a class="nav-link text-light" href="#">Health</a></li>
-            <li class="nav-item"><a class="nav-link text-light" href="#">Science</a></li>
-            <li class="nav-item"><a class="nav-link text-light" href="#">Nature</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="../index.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="#">Technology</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="#">Health</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="#">Science</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="#">Nature</a></li>
         </ul>
-    </div>
+        <p class="mt-3 mb-0">&copy; 2025 The Blog. All rights reserved.</p>
+    </footer>
 
 </body>
 
