--- a/pages/contactUs.html
+++ b/pages/contactUs.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The BLOG website</title>
+    <title>Contact Us | My Blog</title>
     <style>
         body::-webkit-scrollbar {
             display: none;
         }
 
+        /* Active nav link */
         .nav-pills .nav-link.active {
             background-color: #f1f1f1 !important;
             color: #000000 !important;
@@ -28,13 +29,17 @@
 
     <!-- Bootstrap 5.3.3 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+
+    <!-- Bootstrap Icons CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
     <!-- Custom Blog Styles -->
-    <link rel="stylesheet" href="../css/StyleForBlog.css" />
+    <link rel="stylesheet" href="css/StyleForBlog.css" />
 
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+
+    <!-- Bootstrap 5.3.3 JS Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
@@ -63,13 +68,13 @@
                         <a class="nav-link text-light" href="../index.html">Home</a>
                     </li>
                     <li class="nav-item text-center flex-fill">
-                        <a class="nav-link active disabled text-light" href="#">About Us</a>
+                        <a class="nav-link text-light" href="../pages/about.html">About Us</a>
                     </li>
                     <li class="nav-item text-center flex-fill">
                         <a class="nav-link text-light" href="../pages/post.html">Post</a>
                     </li>
                     <li class="nav-item text-center flex-fill">
-                        <a class="nav-link text-light" href="../pages/contactUs.html">Contact Us</a>
+                        <a class="nav-link active disabled text-light" href="../pages/contactUs.html">Contact Us</a>
                     </li>
                 </ul>
             </div>
@@ -79,54 +84,59 @@
     <header class="py-5 text-white">
         <div class="container text-center">
             <div style="background-color: rgba(0, 0, 0, 0.5); padding: 2rem; border-radius: 1rem;">
-                <h1 class="display-5 fw-bold">About Us</h1>
-                <p class="fs-4 fw-normal mb-0">Discover the inspiration behind this website</p>
+                <h1 class="display-5 fw-bold">Contact Us</h1>
+                <p class="fs-4 fw-normal mb-0">We'd love to hear from you! Reach out with any questions or feedback.</p>
             </div>
         </div>
     </header>
 
     <div class="container my-5 bg-dark p-4 rounded">
-
-        <div class="row justify-content-center mb-5">
+        <div class="row">
             <div class="col-md-6">
-                <p class="lead lh-lg text-white">
-                    <span class="fw-bold fs-1">Hello! </span>I created this blog to express my thoughts and share my
-                    passion
-                    for some of my
-                    favorite
-                    programming languages. As a developer, I've had the opportunity to work with many languages, but
-                    there are a few that truly
-                    stand out to me. Languages like Java, PHP, SQL, and HTML/CSS have shaped my development journey and
-                    continue to
-                    inspire me. Java,
-                    with its versatility and widespread use in enterprise-level applications, is a language I deeply
-                    admire. PHP has been
-                    my go-to for building dynamic websites, and I love how flexible and powerful it is for server-side
-                    scripting.
+                <h1 class="text-light  mb-4">Reach Out</h1>
+                <p class="text-light lead fs-4">
+                    <strong>Blog Headquarters</strong><br>
+                    123 Blog Street, Suite 456<br>
+                    City, Country 78910
                 </p>
-            </div>
-            <div class="col-md-6 text-center">
-                <img src="../public/about.jpg" alt="Coding passion" class="img-fluid rounded shadow">
-            </div>
-        </div>
+                <p class="text-light lead fs-4">
+                    <strong>Phone:</strong> (123) 456-7890<br>
+                    <strong>Email:</strong> <a href="mailto:contact@theblog.com"
+                        class="text-light">contact@theblog.com</a>
+                </p>
 
-        <div class="row justify-content-center mb-5">
-            <div class="col-md-6 order-md-2">
-                <p class="lead lh-lg text-white">
-                    SQL is essential for anyone working with databases, and its efficiency in querying large datasets is
-                    unmatched.
-                    Meanwhile, HTML and CSS serve as the foundation for web development, allowing me to create visually
-                    appealing and
-                    responsive websites.Through this blog, I aim to share my knowledge, help others learn, and build a
-                    community of
-                    like-minded developers.
-                    I'll cover topics from beginner to advanced levels, provide code snippets, tutorials, and insights
-                    that will help
-                    anyone who wants to improve their programming skills.
-                </p>
+                <div class="social-icons">
+                    <a href="https://www.facebook.com" target="_blank" class="text-light me-3">
+                        <i class="bi bi-facebook" style="font-size: 2rem; color: #1877F2;"></i>
+                    </a>
+                    <a href="https://mail.google.com" target="_blank" class="text-light me-3">
+                        <i class="bi bi-envelope" style="font-size: 2rem; color: #D44638;"></i>
+                    </a>
+                    <a href="https://www.instagram.com" target="_blank" class="text-light">
+                        <i class="bi bi-instagram" style="font-size: 2rem; color: #C13584;"></i>
+                    </a>
+                </div>
             </div>
-            <div class="col-md-6 order-md-1 text-center">
-                <img src="../public/about2.jpg" alt="Programming Languages" class="img-fluid rounded shadow">
+            <div class="col-md-6">
+                <h1 class="text-light mb-4">Get in Touch</h1>
+                <p class="text-light">Feel free to send us a message using the contact form below. We aim to reply
+                    within 24 hours.</p>
+
+                <form>
+                    <div class="mb-3">
+                        <label for="name" class="form-label text-light">Your Name</label>
+                        <input type="text" class="form-control" id="name" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="email" class="form-label text-light">Your Email</label>
+                        <input type="email" class="form-control" id="email" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="message" class="form-label text-light">Your Message</label>
+                        <textarea class="form-control" id="message" rows="4" required></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-outline-light">Send Message</button>
+                </form>
             </div>
         </div>
     </div>
